deployments/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
  name: plex
  namespace: media
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      affinity: {}
      containers:
        - name: plex
          securityContext:
            privileged: true
          image: plexinc/pms-docker:latest
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 15
            timeoutSeconds: 10
          resources: 
            requests: 
              gpu.intel.com/i915: "1"
              cpu: 1000m
              memory: 7.5Gi
            limits: 
              gpu.intel.com/i915: "1"
          volumeMounts:
            - mountPath: /config
              name: nfs-plex-config
              subPath: config
            - mountPath: /cache
              name: nfs-plex-config
              subPath: cache
            - mountPath: "/Audiobooks"
              readOnly: true
              name: nfs-plex-data
              subPath: Audiobooks
            - mountPath: "/Movies"
              readOnly: true
              name: nfs-plex-data
              subPath: Movies
            - mountPath: "/TVShows"
              readOnly: true
              name: nfs-plex-data
              subPath: TVShows
            - mountPath: "/Music"
              readOnly: true
              name: nfs-plex-data
              subPath: Music
      dnsConfig: {}
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: nfs-plex-config
          persistentVolumeClaim:
            claimName: plex-pvc-config
        - name: nfs-plex-data
          persistentVolumeClaim:
            claimName: media-pvc-data
        - name: transcode
          emptyDir:
            medium: Memory
            sizeLimit: 10Gi
