deployments/plex/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.plex.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: plex
          port: 32400
    - match: Host(`plex.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: plex
          port: 32400
      middlewares:
        - name: default-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
